xidlc/tests/snapshots/codegen_snapshot__cpp__bitmask_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
bitmask_def.cpp
===============
#include"bitmask_def.h"
===============
bitmask_def.h
===============
#ifndef BITMASK_DEF_H
#define BITMASK_DEF_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

struct A{
    enum _flags:uint32_t{
    };
    uint32_t _value{
        0
    };
    constexpr uint32_t operator()()const{
        return _value;
    }
    constexpr operator uint32_t()const{
        return _value;
    }
    constexpr A() = default;
    constexpr A(uint32_t v):_value(v){
    }
    A&operator|=(uint32_t other){
        _value|=other;
        return * this;
    }
    A&operator&=(uint32_t other){
        _value&=other;
        return * this;
    }
    A&operator^=(uint32_t other){
        _value^=other;
        return * this;
    }
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        return ser.write(value._value);
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        uint32_t raw = 0;
        xidl::xcdr::BufferResult res = de.read(raw);
        if(res.ok()){
            value._value = raw;
        }
        return res;
    }
};
struct A{
    enum _flags:uint32_t{
        A = 1u<<0, B = 1u<<1, C = 1u<<2
    };
    uint32_t _value{
        0
    };
    constexpr uint32_t operator()()const{
        return _value;
    }
    constexpr operator uint32_t()const{
        return _value;
    }
    constexpr A() = default;
    constexpr A(uint32_t v):_value(v){
    }
    A&operator|=(uint32_t other){
        _value|=other;
        return * this;
    }
    A&operator&=(uint32_t other){
        _value&=other;
        return * this;
    }
    A&operator^=(uint32_t other){
        _value^=other;
        return * this;
    }
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        return ser.write(value._value);
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        uint32_t raw = 0;
        xidl::xcdr::BufferResult res = de.read(raw);
        if(res.ok()){
            value._value = raw;
        }
        return res;
    }
};
struct A{
    enum _flags:uint32_t{
        A = 1u<<0, B = 1u<<1, C = 1u<<2
    };
    uint32_t _value{
        0
    };
    constexpr uint32_t operator()()const{
        return _value;
    }
    constexpr operator uint32_t()const{
        return _value;
    }
    constexpr A() = default;
    constexpr A(uint32_t v):_value(v){
    }
    A&operator|=(uint32_t other){
        _value|=other;
        return * this;
    }
    A&operator&=(uint32_t other){
        _value&=other;
        return * this;
    }
    A&operator^=(uint32_t other){
        _value^=other;
        return * this;
    }
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        return ser.write(value._value);
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        uint32_t raw = 0;
        xidl::xcdr::BufferResult res = de.read(raw);
        if(res.ok()){
            value._value = raw;
        }
        return res;
    }
};
#endif
