xidlc/tests/snapshots/codegen_snapshot__cpp__bitset_def.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
bitset_def.cpp
===============
#include"bitset_def.h"
===============
bitset_def.h
===============
#ifndef BITSET_DEF_H
#define BITSET_DEF_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

struct A{
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct A:public B{
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
struct A:public B{
    bool a:1;
    bool a:1;
    bool b:1;
    bool c:1;

};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = ser.write(value.a);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.a);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.b);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.c);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = de.read(value.a);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.a);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.b);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.c);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
#endif
