xidlc/tests/snapshots/codegen_snapshot__cpp__const_dec.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_dec.cpp
===============
#include"const_dec.h"
===============
const_dec.h
===============
#ifndef CONST_DEC_H
#define CONST_DEC_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

constexpr int32_t a = 10;
#endif
