xidlc/tests/snapshots/codegen_snapshot__cpp__const_oct.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
const_oct.cpp
===============
#include"const_oct.h"
===============
const_oct.h
===============
#ifndef CONST_OCT_H
#define CONST_OCT_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

constexpr int32_t a = 0 o10;
#endif
