xidlc/tests/snapshots/codegen_snapshot__cpp__enum_simple.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
enum_simple.cpp
===============
#include"enum_simple.h"
===============
enum_simple.h
===============
#ifndef ENUM_SIMPLE_H
#define ENUM_SIMPLE_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

enum class A{
    B, C
};
template < > struct xidl::xcdr::Traits < A > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, A value){
        uint32_t raw = static_cast < uint32_t > (value);
        return ser.write(raw);
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, A&value){
        uint32_t raw = 0;
        xidl::xcdr::BufferResult res = de.read(raw);
        if(res.ok()){
            value = static_cast < A > (raw);
        }
        return res;
    }
};
#endif
