xidlc/tests/snapshots/codegen_snapshot__cpp__except_dcl.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
except_dcl.cpp
===============
#include"except_dcl.h"
===============
except_dcl.h
===============
#ifndef EXCEPT_DCL_H
#define EXCEPT_DCL_H
#include"xidl_xcdr.hpp"
#include<array>
#include<cstddef>
#include<cstdint>
#include<exception>
#include<map>
#include<memory>
#include<string>
#include<vector>

class HelloWorld:public std::exception{
    public:
    HelloWorld() = default;
    const char * what()const noexcept override{
        return"";
    }

    u8 a;
    std::array < u16, 10 > b;
    std::array < std::array < std::string, 20 > , 10 > c;
    std::vector < u8 > c;
    std::string d;
    std::wstring d;
    long double d;

};
template < > struct xidl::xcdr::Traits < HelloWorld > {
    template < typename Codec > static inline xidl::xcdr::BufferResult serialize(xidl::xcdr::Serializer < Codec > &ser, const HelloWorld&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = ser.write(value.a);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.b);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.c);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.c);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.d);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.d);
        if(!res.ok()){
            return res;
        }

        res = ser.write(value.d);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, ser.position()
        };
    }

    template < typename Codec > static inline xidl::xcdr::BufferResult deserialize(xidl::xcdr::Deserializer < Codec > &de, HelloWorld&value){
        xidl::xcdr::BufferResult res{
            XcdrFfiError::Ok, 0
        };
        res = de.read(value.a);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.b);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.c);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.c);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.d);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.d);
        if(!res.ok()){
            return res;
        }

        res = de.read(value.d);
        if(!res.ok()){
            return res;
        }

        return xidl::xcdr::BufferResult{
            XcdrFfiError::Ok, de.position()
        };
    }
};
#endif
